fix gap

--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -45,6 +45,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 5px;
 }
 
 .deleteButton {
